--- a/02_Objects/index.html
+++ b/02_Objects/index.html
@@ -13,7 +13,8 @@
 
     <!-- <script src="./arrays.js"></script> -->
     <!-- <script src="./strings.js"></script> -->
-    <script src="./objects.js"></script>
+    <!-- <script src="./objects.js"></script> -->
+    <script src="./classes.js"></script>
 </body>
 
 </html>
