--- a/06_Bootstrap/index.html
+++ b/06_Bootstrap/index.html
@@ -11,10 +11,11 @@
 
 <body>
 
-    <div class="container">
+    <div class="container-fluid">
         <h1 class="my-4">Working with Bootstrap</h1>
 
         <h2>Container</h2>
+
         <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Fugiat excepturi, nisi odio quos fugit sed fuga
             doloribus assumenda eius corrupti voluptas illum. Qui reiciendis magnam in beatae voluptates molestias,
             illum
@@ -69,8 +70,20 @@
             </div>
         </form>
 
+        <hr>
+        <h2>Adaptive Design</h2>
+
+        <div class="row">
+            <div class="col-6 col-md-2 bg-primary">Block</div>
+            <div class="col-6 col-md-6 bg-secondary">Block</div>
+            <div class="col-12 col-md-4 bg-success">Block</div>
+            <div class="col-4 col-md-4 bg-secondary">Block</div>
+            <div class="col-4 col-md-4 bg-primary">Block</div>
+            <div class="col-4 col-md-4 bg-secondary">Block</div>
+        </div>
+
         <h2>Carousel</h2>
-        <div id="carouselExampleControls" class="carousel slide" data-bs-ride="carousel">
+        <div id="carouselExampleControls" class="carousel slide d-none d-md-block" data-bs-ride="carousel">
             <div class="carousel-inner">
                 <div class="carousel-item active">
                     <img src="https://picsum.photos/500/200" class="d-block w-100" alt="Random image">
